[package]
name = "cooklang-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cooklang = { path = "..", features = ["wasm"] }
wasm-bindgen = "0.2.100"
serde = { version = "1", features = ["derive", "rc"] }
ansi-to-html = "0.2.1"
serde_json = "1"
maud = "0.26.0"
tsify = {version = "0.5.5"}

[build-dependencies]
git2 = { version = "0.20", default-features = false }
